add getting playlist details spec
